--- a/KzMuseum.html
+++ b/KzMuseum.html
@@ -87,7 +87,7 @@
             >
           </p>
         </div>
-            <iframe class="national-museum-of-the-republi-inner" width="853" height="480" src="http://evgeniyvolkov.com/pano/gold/" frameborder="0" allowfullscreen allow="xr-spatial-tracking"></iframe>
+            <iframe class="national-museum-of-the-republi-inner" width="853" height="480" src="http://evgeniyvolkov.com/pano/voenno-istoricheskiy-muzei-rk/index.html" frameborder="0" allowfullscreen allow="xr-spatial-tracking"></iframe>
       </div>
     </main>
   </body>
