--- a/KzMuseum.html
+++ b/KzMuseum.html
@@ -87,7 +87,7 @@
             >
           </p>
         </div>
-            <iframe class="national-museum-of-the-republi-inner" width="853" height="480" src="https://matterport.com/discover/space/LzjERRJqwEB" frameborder="0" allowfullscreen allow="xr-spatial-tracking"></iframe>
+            <iframe class="national-museum-of-the-republi-inner" width="853" height="480" src="https://elbasylibrary.gov.kz/3dtour/2/index.html?tour_language=myFirstLang&s=pano523725&h=71.3328&v=-0.6431&f=90.0000" frameborder="0" allowfullscreen allow="xr-spatial-tracking"></iframe>
       </div>
     </main>
   </body>
